--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="cabecalho">
       <img src="/src/imagens/pokebola.png" alt="pokebola" class="pokebola" />
-      <h1 class="titulo">Mapa dev Weelk</h1>
+      <h1 class="titulo">Pokemon Cards</h1>
     </header>
 
     <main class="pokemon-slider">
